fix overflow on small screens

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{- define "main" -}}
-<div class="row flex-xl-nowrap justify-content-center">
+<div class="d-flex justify-content-center">
     {{/* Show ToC by default. */}}
     {{ if ne .Params.toc false }}
     <div class="d-none d-xl-block col-xl-2 docs-toc">
