--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <div class="d-flex justify-content-center">
     {{/* Show ToC by default. */}}
     {{ if ne .Params.toc false }}
-    <div class="d-none d-xl-block col-xl-2 docs-toc">
+    <div class="d-none d-xl-block docs-toc">
         {{ partial "hooks/page_toc_start" . }}
 
         <ul class="nav toc-top">
