--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,10 @@
+{{/* Based on https://github.com/wowchemy/wowchemy-hugo-themes/blob/main/modules/wowchemy/layouts/partials/book_layout.html */}}
 {{- define "main" -}}
 <div class="d-flex justify-content-center">
     {{/* Show ToC by default. */}}
     {{ if ne .Params.toc false }}
     <div class="d-none d-xl-block docs-toc">
-        {{ partial "hooks/page_toc_start" . }}
+        {{ partial "functions/get_hook" (dict "hook" "toc-start" "context" .) }}
 
         <ul class="nav toc-top">
         <li><a href="#" id="back_to_top" class="docs-toc-title">{{ i18n "on_this_page" }}</a></li>
@@ -11,7 +12,7 @@
 
         {{ .TableOfContents }}
 
-        {{ partial "hooks/page_toc_end" . }}
+        {{ partial "functions/get_hook" (dict "hook" "toc-start" "context" .) }}
     </div>
     {{ end }}
 
